# mortal

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.cpp  mortal.json
examples/: frontflip.json
include/: common.h  editor.h  ground.h  menu.h  mmenu.h  pose.h  poses.h  psik.h  serialize.h
src/: CMakeLists.txt  editor.cpp  ground.cpp  main.cpp  mmenu.cpp  pose.cpp  psik.cpp  serialize.cpp
